# feedy

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/superpowers/plans/: 2026-05-17-sqlite-storage.md
docs/superpowers/specs/: 2026-05-17-sqlite-storage-design.md
feedy/: cli.py  storage.py
feedy/sources/: base.py
tests/: test_storage.py
