[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedy"
version = "0.1.0"
description = "Developer blog feed aggregator with AI summaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
feedy = "feedy.cli:cli"
